--- a/Quizzes/17_Inheritance/Monsters/html/index.html
+++ b/Quizzes/17_Inheritance/Monsters/html/index.html
@@ -84,7 +84,7 @@ $(function() {
 <li>If the monster does not die, the monster attacks the player back. The player’s health is reduced by the monster’s damage.</li>
 <li>The game ends when the player has died (loss) or reached level 20 (win)</li>
 <li>If the player dies, the game should tell the player what level they were and how much gold they had.</li>
-<li>If the player wins, the game should tell the player they won, and how much gold they had</li>
+<li>If the player wins, the game should tell the player they won, and how much gold they had.</li>
 </ul>
 <p>Reference: <a href="https://www.learncpp.com/cpp-tutorial/chapter-24-summary-and-quiz/">Learncpp: Inheritance</a> </p>
 </div></div><!-- PageDoc -->
